--- a/dealers.html
+++ b/dealers.html
@@ -1779,96 +1779,102 @@ Why SVL Global
 			<section id="DealerSignUp" class="uk-section p-4 grey-700 font-size-3" uk-height-viewport>
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealer Sign up</span></h2>
 				<div class="uk-container uk-text-center">
-						<form action="" class="form-divider uk-grid-small uk-child-width-1-2" uk-grid>
-							<div class="uk-width-1-1 travel-type-selector ml-2 pl-3">
-								<div class="uk-grid-small uk-child-width-auto mb-1" uk-grid>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1" checked> IT Company</label>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1"> Hotel</label>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1"> Tourism</label>
+					<form action="" class="form-divider uk-grid-small uk-child-width-1-3" uk-grid>
+						<div class="uk-width-1-5">
+							<select class="form-control">
+								<option selected disabled>Dealer Type*</option>
+								<option>1-50</option>
+								<option>50-100</option>
+								<option>more than 100</option>
+							</select>
+						</div>
+						<div>
+							<input class="form-control" type="text" placeholder="Business Name*">
+						</div>
+						<div>
+							<input class="form-control" type="text" placeholder="Contact Person Name">
+						</div>
+						<div class="uk-width-1-5">
+							<select class="form-control">
+								<option selected disabled>Business Size*</option>
+								<option>1-50</option>
+								<option>50-100</option>
+								<option>more than 100</option>
+							</select>
+						</div>
+						<div class="uk-width-2-5">
+							<input class="form-control" type="text" placeholder="Webiste URL">
+						</div>
+						<div class="uk-width-1-5">
+							<select class="form-control">
+								<option selected disabled>Products*</option>
+								<option>1-50</option>
+								<option>50-100</option>
+								<option>more than 100</option>
+							</select>
+						</div>
+						<div class="uk-width-1-1">
+							<div class="uk-grid-small uk-child-width-expand" uk-grid>
+								<div class="uk-width-auto">
+									<select class="form-control">
+										<option selected disabled>+91</option>
+										<option>+92</option>
+										<option>+93</option>
+										<option>+94</option>
+									</select>
+								</div>
+								<div>
+									<input class="form-control" type="text" placeholder="Contact Number*">
+								</div>
+								<div>
+									<input class="form-control" type="text" placeholder="Email ID*">
 								</div>
 							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Company Name*">
-							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Contact Person Name">
-							</div>
-							<div class="uk-width-1-5">
-								<select class="form-control">
-									<option selected disabled>Company Size*</option>
-									<option>1-50</option>
-									<option>50-100</option>
-									<option>more than 100</option>
-								</select>
-							</div>
-							<div class="uk-width-2-5">
-								<input class="form-control" type="text" placeholder="Company URL">
-							</div>
-							<div class="uk-width-2-5">
-								<input class="form-control" type="text" placeholder="Department">
-							</div>
-							<div class="uk-width-1-1">
-								<div class="uk-grid-small uk-child-width-expand" uk-grid>
-									<div class="uk-width-auto">
-										<select class="form-control">
-											<option selected disabled>+91</option>
-											<option>+92</option>
-											<option>+93</option>
-											<option>+94</option>
-										</select>
-									</div>
-									<div>
-										<input class="form-control" type="text" placeholder="Contact Number*">
-									</div>
-									<div>
-										<input class="form-control" type="text" placeholder="Email ID*">
-									</div>
+						</div>
+						<div class="uk-width-1-3">
+							<select class="form-control">
+								<option selected disabled>Country</option>
+								<option>Option 02</option>
+							</select>
+						</div>
+						<div class="uk-width-1-3">
+							<select class="form-control">
+								<option selected>State</option>
+								<option>Option 02</option>
+							</select>
+						</div>
+						<div class="uk-width-1-3">
+							<select class="form-control">
+								<option>City</option>
+								<option>Option 02</option>
+							</select>
+						</div>
+						<div>
+							<input class="form-control" type="text" placeholder="Create Password*">
+						</div>
+						<div>
+							<input class="form-control" type="text" placeholder="Confirm Password*">
+						</div>
+						<div class="uk-width-1-1 mt-4">
+							<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
+								<div>
+									<label><input class="uk-checkbox" type="checkbox" checked> I agree <a href="#">Terms and Conditions</a></label>
+								</div>
+								<div>
+									<img src="assets/img/newCaptchaAnchor.gif" alt="" uk-img width="200">
+								</div>
+								<div>
+									<p>Already a member? <a href="#">Sign In</a> | <a href="#">Support</a></p>
 								</div>
 							</div>
-							<div class="uk-width-1-3">
-								<select class="form-control">
-									<option selected disabled>Country</option>
-									<option>Option 02</option>
-								</select>
-							</div>
-							<div class="uk-width-1-3">
-								<select class="form-control">
-									<option selected>State</option>
-									<option>Option 02</option>
-								</select>
-							</div>
-							<div class="uk-width-1-3">
-								<select class="form-control">
-									<option>City</option>
-									<option>Option 02</option>
-								</select>
-							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Create Password*">
-							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Confirm Password*">
-							</div>
-							<div class="uk-width-1-1 mt-4">
-								<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
-									<div>
-										<label><input class="uk-checkbox" type="checkbox" checked> I agree <a href="#">Terms and Conditions</a></label>
-									</div>
-									<div>
-										<img src="assets/img/newCaptchaAnchor.gif" alt="" uk-img width="200">
-									</div>
-									<div>
-										<p>Already a member? <a href="#">Sign In</a> | <a href="#">Support</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="uk-width-1-1">
-								<a href="corporate.php" class="title-fancy -red my-3">
-									<span class="btn-arrow"></span>
-									<span class="twp-read-more text">Continue</span>
-								</a>
-							</div>
-						</form>
+						</div>
+						<div class="uk-width-1-1">
+							<a href="corporate.php" class="title-fancy -red my-3">
+								<span class="btn-arrow"></span>
+								<span class="twp-read-more text">Continue</span>
+							</a>
+						</div>
+					</form>
 				</div>
 			</section>
 			
@@ -2115,33 +2121,39 @@ Why SVL Global
 			<section id="DealerEnquiry" class="uk-section p-4 grey-700 font-size-3" uk-height-viewport>
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Dealer Enquiry</span></h2>
 				<div class="uk-container uk-text-center">
-						<form action="" class="form-divider uk-grid-small uk-child-width-1-2" uk-grid>
-							<div class="uk-width-1-1 travel-type-selector ml-2 pl-3">
-								<div class="uk-grid-small uk-child-width-auto mb-1" uk-grid>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1" checked> IT Company</label>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1"> Hotel</label>
-									<label class="font-size-2 uk-text-bold"><input class="uk-radio" type="radio" name="radio1"> Tourism</label>
-								</div>
+						<form action="" class="form-divider uk-grid-small uk-child-width-1-3" uk-grid>
+							<div class="uk-width-1-5">
+								<select class="form-control">
+									<option selected disabled>Dealer Type*</option>
+									<option>1-50</option>
+									<option>50-100</option>
+									<option>more than 100</option>
+								</select>
 							</div>
 							<div>
-								<input class="form-control" type="text" placeholder="Company Name*">
+								<input class="form-control" type="text" placeholder="Business Name*">
 							</div>
 							<div>
 								<input class="form-control" type="text" placeholder="Contact Person Name">
 							</div>
 							<div class="uk-width-1-5">
 								<select class="form-control">
-									<option selected disabled>Company Size*</option>
+									<option selected disabled>Business Size*</option>
 									<option>1-50</option>
 									<option>50-100</option>
 									<option>more than 100</option>
 								</select>
 							</div>
 							<div class="uk-width-2-5">
-								<input class="form-control" type="text" placeholder="Company URL">
+								<input class="form-control" type="text" placeholder="Webiste URL">
 							</div>
-							<div class="uk-width-2-5">
-								<input class="form-control" type="text" placeholder="Department">
+							<div class="uk-width-1-5">
+								<select class="form-control">
+									<option selected disabled>Products*</option>
+									<option>1-50</option>
+									<option>50-100</option>
+									<option>more than 100</option>
+								</select>
 							</div>
 							<div class="uk-width-1-1">
 								<div class="uk-grid-small uk-child-width-expand" uk-grid>
@@ -2179,11 +2191,8 @@ Why SVL Global
 									<option>Option 02</option>
 								</select>
 							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Create Password*">
-							</div>
-							<div>
-								<input class="form-control" type="text" placeholder="Confirm Password*">
+							<div class="uk-width-1-1">
+								<textarea class="form-control"></textarea>
 							</div>
 							<div class="uk-width-1-1 mt-4">
 								<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
@@ -2201,7 +2210,7 @@ Why SVL Global
 							<div class="uk-width-1-1">
 								<a href="corporate.php" class="title-fancy -red my-3">
 									<span class="btn-arrow"></span>
-									<span class="twp-read-more text">Continue</span>
+									<span class="twp-read-more text">Submit</span>
 								</a>
 							</div>
 						</form>
