--- a/dealers.html
+++ b/dealers.html
@@ -2192,7 +2192,7 @@ Why SVL Global
 								</select>
 							</div>
 							<div class="uk-width-1-1">
-								<textarea class="form-control"></textarea>
+								<textarea class="form-control" placeholder="Description"></textarea>
 							</div>
 							<div class="uk-width-1-1 mt-4">
 								<div class="uk-child-width-1-3 uk-flex-center uk-flex-middle" uk-grid>
