--- a/dealers.html
+++ b/dealers.html
@@ -1706,7 +1706,6 @@ Why SVL Global
 			
 			<section id="Tie-upBenefits" class="uk-section uk-section-muted p-4 grey-700 font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Tie-up Benefits</span></h2>
-				<p class="font-size-4 text-dark mb-4"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
 				<div class="uk-grid-match uk-grid-medium uk-child-width-1-3" uk-grid>
 					<div>
 						<div class="uk-card uk-card-default uk-card-body px-3">
@@ -1714,7 +1713,8 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1725,7 +1725,8 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1736,7 +1737,8 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1747,7 +1749,8 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1758,7 +1761,8 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1769,7 +1773,44 @@ Why SVL Global
 								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
 								<div>
 									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
-									<p class="mb-0">To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="uk-card uk-card-default uk-card-body px-3">
+							<div class="uk-flex uk-flex-top">
+								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
+								<div>
+									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="uk-card uk-card-default uk-card-body px-3">
+							<div class="uk-flex uk-flex-top">
+								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
+								<div>
+									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="uk-card uk-card-default uk-card-body px-3">
+							<div class="uk-flex uk-flex-top">
+								<i class="fas fa-car fa-3x text-warning border-right-1 mr-3 pr-3"></i>
+								<div>
+									<h6 class="uk-text-uppercase text-warning">Benefit</h6>
+									<p>To add your bank account in the Driver app, go to Payments in the app menu.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
