--- a/dealers.html
+++ b/dealers.html
@@ -1921,32 +1921,36 @@ Why SVL Global
 			
 			<section id="IntegratedFeatures" class="uk-section uk-section-muted p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Integrated Features</span></h2>
-				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, perspiciatis. Ut architecto, numquam obcaecati optio consequuntur perferendis labore eius amet voluptates nisi saepe et error.</em></p>
 				<div class="uk-child-width-1-3 uk-flex-center uk-text-center" uk-grid>
 					<div>
 						<img src="assets/img/icon-5.svg" alt="" width="80" height="80" uk-svg class="uk-margin-bottom">
 						<h4>Real-life Dashboard</h4>
-						<p>Get rid of the hassle of collecting travel receipts and managing reimbursements.</p>
+						<p class="mb-1">Get rid of the hassle of collecting travel receipts and managing reimbursements.</p>
+						<a href="#" class="uk-button uk-button-text">Readmore</a>
 					</div>
 					<div>
 						<img src="assets/img/icon-6.svg" alt="" width="80" height="80" uk-svg class="uk-margin-bottom">
 						<h4>Easy Account Handling</h4>
-						<p>Set your own ride terms, create cost centres, and control budget allocation.</p>
+						<p class="mb-1">Set your own ride terms, create cost centres, and control budget allocation.</p>
+						<a href="#" class="uk-button uk-button-text">Readmore</a>
 					</div>
 					<div>
 						<img src="assets/img/icon-7.svg" alt="" width="80" height="80" uk-svg class="uk-margin-bottom">
 						<h4>Smart Lead Management</h4>
-						<p>Empower your employees to book their own rides with the tap of a button.</p>
+						<p class="mb-1">Empower your employees to book their own rides with the tap of a button.</p>
+						<a href="#" class="uk-button uk-button-text">Readmore</a>
 					</div>
 					<div>
 						<img src="assets/img/icon-5.svg" alt="" width="80" height="80" uk-svg class="uk-margin-bottom">
 						<h4>Automatic Invoicing</h4>
-						<p>Empower your employees to book their own rides with the tap of a button.</p>
+						<p class="mb-1">Empower your employees to book their own rides with the tap of a button.</p>
+						<a href="#" class="uk-button uk-button-text">Readmore</a>
 					</div>
 					<div>
 						<img src="assets/img/icon-6.svg" alt="" width="80" height="80" uk-svg class="uk-margin-bottom">
 						<h4>Round The Clock Support</h4>
-						<p>Empower your employees to book their own rides with the tap of a button.</p>
+						<p class="mb-1">Empower your employees to book their own rides with the tap of a button.</p>
+						<a href="#" class="uk-button uk-button-text">Readmore</a>
 					</div>
 				</div>
 			</section>
