--- a/dealers.html
+++ b/dealers.html
@@ -1549,7 +1549,7 @@ Why SVL Global
 		<main class="col border-left-2 overflow-hidden">
 			<section id="WhyJoinWithUs" class="uk-section p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Why Join With Us</span></h2>
-				<p class="font-size-4 mb-4"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
+				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, neque, libero. Placeat vitae optio temporibus magni ut, dicta ipsam sit distinctio ad reiciendis aliquid doloremque pariatur cupiditate. Quis, quidem, officiis.</em></p>
 				<div class="uk-child-width-1-2" uk-grid uk-height-match="target: > div > .uk-card">
 					<div>
 						<div class="uk-card uk-card-hover uk-card-small">
@@ -1957,7 +1957,7 @@ Why SVL Global
 			
 			<section id="IntegrityIsOurPriority" class="uk-section p-4 grey-700 font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Integrity Is Our Priority</span></h2>
-				<p class="font-size-4 mb-4"><em class="text-dark">We’re working to make T-pilots the safest way by exploiting the latest technology and ensuring a strict training process to our captains. You can also track your ride and get in touch with us anytime, 24/7.</em></p>
+				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quibusdam earum architecto, qui consequuntur, quae provident animi in ab aperiam ex temporibus, porro recusandae, nam! Assumenda ea, quasi odit atque.</em></p>
 				<div class="uk-container">
 					<div class="uk-child-width-1-2 uk-grid-row-medium uk-flex-center" uk-grid>
 						<div>
@@ -1966,6 +1966,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1975,6 +1976,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1984,6 +1986,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -1993,6 +1996,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -2002,6 +2006,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -2011,6 +2016,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -2020,6 +2026,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -2029,6 +2036,7 @@ Why SVL Global
 								<div class="media-body">
 									<h6>Safety Title</h6>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit Similique voluptatibus eius impedit.</p>
+									<a href="#" class="uk-button uk-button-text">Readmore</a>
 								</div>
 							</div>
 						</div>
@@ -2038,7 +2046,7 @@ Why SVL Global
 			
 			<section id="PaymentProcess" class="uk-section uk-section-muted p-4 grey-700 text-justify font-size-3">
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Payment Process</span></h2>
-				<p class="font-size-4 mb-4"><em class="text-dark">When you drive with SVL Global, your earnings are transferred automatically, so you don't have to worry about paperwork. Find out how to add a bank account and how to cash out.</em></p>
+				<p class="font-size-4 mb-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis architecto porro vitae ipsum reiciendis voluptatibus numquam veritatis magnam? Ab qui adipisci eligendi voluptates illum deserunt eaque est corporis tenetur corrupti?</em></p>
 				<div class="uk-child-width-1-3 uk-text-center process" uk-grid>
 					<div>
 						<div class="card rounded-circle uk-inline uk-flex uk-flex-center uk-flex-middle mb-3">
@@ -2113,7 +2121,7 @@ Why SVL Global
 			
 			<section id="StrategicPartners" class="uk-section p-4 grey-700 font-size-3" uk-height-viewport>
 				<h2 class="uk-heading-line-1 mb-5 text-primary"><span>Strategic Partners</span></h2>
-				<p class="font-size-4 mb-5"><em class="text-dark">Would you like to be a piece of an option that could be greater than anything you have known up until this point? At that point this is your chance to go along with us, with our T-PIlots.</em></p>
+				<p class="font-size-4 mb-5"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur atque aspernatur inventore saepe quas odio reprehenderit quibusdam ratione non ex aut quisquam reiciendis sed accusamus, iure animi mollitia? Voluptas, quaerat.</em></p>
 				<div class="uk-child-width-1-4 uk-flex-middle uk-flex-center" uk-grid uk-height-match=".card">
 					<div>
 						<img data-src="assets/img/google.png" width="150" alt="" uk-img class="uk-align-center mb-0">
