--- a/dealers.html
+++ b/dealers.html
@@ -2288,7 +2288,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2296,7 +2296,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2304,7 +2304,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2312,7 +2312,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2320,7 +2320,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2328,7 +2328,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
@@ -2336,7 +2336,7 @@ Why SVL Global
 							<li>
 								<div class="uk-card uk-card-default uk-card-body uk-card-small mx-3 my-2">
 									<img class="uk-border-circle" src="https://getuikit.com/docs/images/avatar.jpg" width="100" height="100" alt="Border circle">
-									<p class="pt-4"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam nobis, saepe itaque vitae quidem doloremque quae dolorum totam.</i></p>
+									<p class="pt-4"><em class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolor ea, molestias expedita ullam... <a class="uk-button uk-button-text text-primary uk-text-capitalize" href="#">Read More</a></em></p>
 									<h6 class="text-warning">Name</h6>
 									<p>Partner | Location</p>
 								</div>
